ヘッダーメニュー調整

--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
           <!-- Navigation (pc) -->
           <div class="android-navigation-container">
             <nav class="android-navigation mdl-navigation">
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Phones</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Tablets</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Wear</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">TV</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Auto</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">One</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Play</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#about">About</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#services">Services</a>
+              <!-- <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#works">Works</a> -->
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#skills">Skills</a>
+              <!-- <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#contact">Contact</a> -->
+              <!-- <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#massage">Massage</a> -->
             </nav>
           </div>
 
@@ -65,12 +64,12 @@
       <!-- <div class="mobilemenu-wraper"> -->
         <div class="android-drawer mdl-layout__drawer">
             <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="">Phones</a>
-            <a class="mdl-navigation__link" href="">Tablets</a>
-            <a class="mdl-navigation__link" href="">Wear</a>
-            <a class="mdl-navigation__link" href="">TV</a>
-            <a class="mdl-navigation__link" href="">Auto</a>
-            <a class="mdl-navigation__link" href="">One</a>
+            <a class="mdl-navigation__link" href="#about">About</a>
+            <a class="mdl-navigation__link" href="#services">Services</a>
+            <!-- <a class="mdl-navigation__link" href="#works">Works</a> -->
+            <a class="mdl-navigation__link" href="#skills">Skills</a>
+            <!-- <a class="mdl-navigation__link" href="#contact">Contact</a> -->
+            <!-- <a class="mdl-navigation__link" href="#massage">Massage</a> -->
           </nav>
         </div>
       <!-- </div> -->
@@ -81,48 +80,52 @@
         <div class="android-be-together-section mdl-typography--text-center">
           <div class="logo-font android-slogan">Doa Works</div>
           <div class="logo-font android-sub-slogan">Webの力であらゆる人の成果を最大化します</div>
-          <a href="#screens">
+          <!-- スクロールボタン -->
+          <!-- <a href="#contact">
             <button class="android-fab mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-js-ripple-effect">
               <i class="material-icons">expand_more</i>
             </button>
-          </a>
+          </a> -->
         </div>
 
         <!-- About -->
         <div class="android-screen-section mdl-typography--text-center">
-          <a name="screens"></a>
-          <h2>Doa Worksについて</h2>
+          <a name="about"></a>
+          <!-- <h2>Doa Worksについて</h2> -->
+          <h2>About</h2>
         </div>
 
-        <!-- About -->
+        <!-- Services -->
         <div class="android-screen-section mdl-typography--text-center">
-          <a name="screens"></a>
-          <h2>Doa Worksができること</h2>
+          <a name="services"></a>
+          <!-- <h2>Doa Worksができること</h2> -->
+          <h2>Services</h2>
         </div>
 
-        <!-- About -->
-        <div class="android-screen-section mdl-typography--text-center">
-          <a name="screens"></a>
+        <!-- Works -->
+        <!-- <div class="android-screen-section mdl-typography--text-center">
+          <a name="works"></a>
           <h2>制作実績</h2>
+        </div> -->
+
+        <!-- Skills -->
+        <div class="android-screen-section mdl-typography--text-center">
+          <a name="skills"></a>
+          <!-- <h2>経歴・スキル</h2> -->
+          <h2>Skills</h2>
         </div>
 
-        <!-- About -->
-        <div class="android-screen-section mdl-typography--text-center">
-          <a name="screens"></a>
-          <h2>経歴・スキル</h2>
-        </div>
-
-        <!-- About -->
-        <div class="android-screen-section mdl-typography--text-center">
-          <a name="screens"></a>
-          <h2>感謝の思い</h2>
-        </div>
-
-        <!-- About -->
-        <div class="android-screen-section mdl-typography--text-center">
-          <a name="screens"></a>
+        <!-- Contact -->
+        <!-- <div class="android-screen-section mdl-typography--text-center">
+          <a name="contact"></a>
           <h2>連絡先</h2>
-        </div>
+        </div> -->
+
+        <!-- Massage -->
+        <!-- <div class="android-screen-section mdl-typography--text-center">
+          <a name="massage"></a>
+          <h2>感謝の思い</h2>
+        </div> -->
 
         <!-- footer -->
         <footer class="android-footer mdl-mega-footer">
