--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#about">About</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#services">Services</a>
               <!-- <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#works">Works</a> -->
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#skills">Skills</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#skills">Skills & Career</a>
               <!-- <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#contact">Contact</a> -->
               <!-- <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#massage">Massage</a> -->
             </nav>
@@ -61,25 +61,23 @@
       </div>
 
       <!-- Navigation (mobile) -->
-      <!-- <div class="mobilemenu-wraper"> -->
-        <div class="android-drawer mdl-layout__drawer">
-            <nav class="mdl-navigation">
+      <div class="android-drawer mdl-layout__drawer">
+          <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="#about">About</a>
             <a class="mdl-navigation__link" href="#services">Services</a>
             <!-- <a class="mdl-navigation__link" href="#works">Works</a> -->
-            <a class="mdl-navigation__link" href="#skills">Skills</a>
+            <a class="mdl-navigation__link" href="#skills">Skills & Career</a>
             <!-- <a class="mdl-navigation__link" href="#contact">Contact</a> -->
             <!-- <a class="mdl-navigation__link" href="#massage">Massage</a> -->
-          </nav>
-        </div>
-      <!-- </div> -->
+        </nav>
+      </div>
 
       <!-- Top -->
       <div class="android-content mdl-layout__content">
         <a name="top"></a>
         <div class="android-be-together-section mdl-typography--text-center">
-          <div class="logo-font android-slogan">Doa Works</div>
-          <div class="logo-font android-sub-slogan">Webの力であらゆる人の成果を最大化します</div>
+          <div class="logo-font android-slogan">成果につながる<br>Web制作を</div>
+          <div class="logo-font android-sub-slogan">作るだけじゃない。課題を解決するために最適なWeb制作をご提案・ご提供します。</div>
           <!-- スクロールボタン -->
           <!-- <a href="#contact">
             <button class="android-fab mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-js-ripple-effect">
@@ -92,33 +90,70 @@
         <div class="android-screen-section mdl-typography--text-center">
           <a name="about"></a>
           <!-- <h2>Doa Worksについて</h2> -->
-          <h2>About</h2>
+          <div class="blue">
+            <h2>About</h2>
+            <p>ビジネスにおいてWebサイトを「作る」だけでは、不十分だと考えています。</p>
+            <p>Webサイトはあくまで課題解決の手段に過ぎません。</p>
+            <p>Doa Worksでは、お客様が抱える課題を丁寧にヒアリングさせて頂き、「課題を解決できるWeb制作」を提供いたします。</p>
+            <p>届けたい人に、しっかりと価値が伝わるWeb制作をお約束します。</p>
+
+            <h3>大切にしていること</h3>
+            <ul>
+              <li>お客様の課題によりそうため、丁寧にヒアリングさせていただきます</li>
+              <li>常にごまかさず、誠実に仕事に取り組みます</li>
+              <li>積極的にご提案させていただきます。</li>
+              <li>納期を守ります</li>
+            </ul>
+          </div>
         </div>
 
         <!-- Services -->
         <div class="android-screen-section mdl-typography--text-center">
           <a name="services"></a>
           <!-- <h2>Doa Worksができること</h2> -->
-          <h2>Services</h2>
+          <div class="blue">
+            <h2>Services</h2>
+            <p>以下のようなサービスでお客様の課題を解決します</p>
+            <ul>
+              <li>Webサイト制作（ホームページ、LP、オウンドメディア）</li>
+              <li>業務システムの構築</li>
+              <li>SEOによるWebマーケティング支援</li>
+            </ul>
+          </div>
         </div>
 
         <!-- Works -->
         <!-- <div class="android-screen-section mdl-typography--text-center">
           <a name="works"></a>
-          <h2>制作実績</h2>
+          <div class="blue">
+            <h2>制作実績</h2>
+          </div>
         </div> -->
 
         <!-- Skills -->
         <div class="android-screen-section mdl-typography--text-center">
           <a name="skills"></a>
           <!-- <h2>経歴・スキル</h2> -->
-          <h2>Skills</h2>
+          <div class="blue">
+            <h2>Skills & Career</h2>
+
+            <h3>使用できる言語、技術</h3>
+            <p>HTML, CSS, JavaScript, PHP(CakePHP), AWS, Git</p>
+
+            <h3>保有資格</h3>
+            <p>応用情報処理技術者, AWSソリューションアーキテクト(アソシエイト)</p>
+
+            <h3>経歴</h3>
+            <p></p>
+          </div>
         </div>
 
         <!-- Contact -->
         <!-- <div class="android-screen-section mdl-typography--text-center">
           <a name="contact"></a>
-          <h2>連絡先</h2>
+          <div class="blue">
+            <h2>連絡先</h2>
+          </div>
         </div> -->
 
         <!-- Massage -->
