--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <a name="top"></a>
         <div class="android-be-together-section mdl-typography--text-center">
           <div class="logo-font android-slogan">成果につながる<br>Web制作を</div>
-          <div class="logo-font android-sub-slogan">作るだけじゃない。課題を解決するために最適なWeb制作をご提案・ご提供します。</div>
+          <div class="logo-font android-sub-slogan">作るだけではなく、課題を解決するために最適なWeb制作をご提案・ご提供します。</div>
           <!-- スクロールボタン -->
           <!-- <a href="#contact">
             <button class="android-fab mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-js-ripple-effect">
@@ -88,42 +88,45 @@
 
         <!-- About -->
         <div class="android-screen-section mdl-typography--text-center">
+          <div class="space"></div>
           <a name="about"></a>
           <!-- <h2>Doa Worksについて</h2> -->
           <div class="blue">
             <h2>About</h2>
+            <p>Doa WorksはWeb制作の個人事務所です。小さな事務所だからこそできる、細やかさや丁寧さを大切にしています。</p>
             <p>ビジネスにおいてWebサイトを「作る」だけでは、不十分だと考えています。</p>
             <p>Webサイトはあくまで課題解決の手段に過ぎません。</p>
             <p>Doa Worksでは、お客様が抱える課題を丁寧にヒアリングさせて頂き、「課題を解決できるWeb制作」を提供いたします。</p>
             <p>届けたい人に、しっかりと価値が伝わるWeb制作をお約束します。</p>
-
-            <h3>大切にしていること</h3>
-            <ul>
-              <li>お客様の課題によりそうため、丁寧にヒアリングさせていただきます</li>
-              <li>常にごまかさず、誠実に仕事に取り組みます</li>
-              <li>積極的にご提案させていただきます。</li>
-              <li>納期を守ります</li>
-            </ul>
           </div>
         </div>
 
         <!-- Services -->
         <div class="android-screen-section mdl-typography--text-center">
+          <div class="space"></div>
           <a name="services"></a>
           <!-- <h2>Doa Worksができること</h2> -->
           <div class="blue">
             <h2>Services</h2>
             <p>以下のようなサービスでお客様の課題を解決します</p>
-            <ul>
-              <li>Webサイト制作（ホームページ、LP、オウンドメディア）</li>
-              <li>業務システムの構築</li>
-              <li>SEOによるWebマーケティング支援</li>
-            </ul>
+
+            <h3>Webサイト制作（ホームページ、LP、オウンドメディア）</h3>
+            <p>
+              単一ページの販促用LPから、自社ホームページ、オウンドメディア構築まで、ご要望に合わせて制作します。
+              Web制作について経験がないお客様についても、予算感・ご希望に合わせて最適な提案をさせていただきます。
+            </p>
+
+            <h3>業務システムの構築支援</h3>
+            <p>メールサーバーの構築、各種帳票の電子運用化、業務のワークフロー見直しとそれにともなうシステム制作など、日々の業務をより効率的にして、組織の成果を最大化するための施策を、コンサルティングとシステムの両面から支援させていただきます。</p>
+
+            <h3>SEOによるWebマーケティング支援</h3>
+            <p>オウンドメディアや自社ホームページからのSEO集客についてアドバイス、SEOを強化するためのWeb制作をご提供します。</p>
           </div>
         </div>
 
         <!-- Works -->
         <!-- <div class="android-screen-section mdl-typography--text-center">
+          <div class="space"></div>
           <a name="works"></a>
           <div class="blue">
             <h2>制作実績</h2>
@@ -132,24 +135,30 @@
 
         <!-- Skills -->
         <div class="android-screen-section mdl-typography--text-center">
+          <div class="space"></div>
           <a name="skills"></a>
           <!-- <h2>経歴・スキル</h2> -->
           <div class="blue">
             <h2>Skills & Career</h2>
 
             <h3>使用できる言語、技術</h3>
-            <p>HTML, CSS, JavaScript, PHP(CakePHP), AWS, Git</p>
+            <p>HTML, CSS, JavaScript, PHP(CakePHP), WordPress, AWS, 各種レンタルサーバー, Git等</p>
 
             <h3>保有資格</h3>
-            <p>応用情報処理技術者, AWSソリューションアーキテクト(アソシエイト)</p>
+            <p>応用情報処理技術者<br>AWSソリューションアーキテクト(アソシエイト)</p>
 
             <h3>経歴</h3>
-            <p></p>
+            <p>
+              石川工業高等専門学校 電子機械工学専攻 卒業（大学同等の学士取得済み）<br>
+              新卒で業界No.1のガス器具メーカーグループにて、電子回路設計をメインに5年間従事。電子回路設計、ソフトウェア検討、製造ライン検討の業務を通して、プロジェクト運営に関する業務を幅広く経験。<br>
+              上記の会社を退職後、1年ほどかけてWeb制作、SEOについてゼロから学ぶ。現在は、不動産関係や商店街など、地元石川県のWeb制作をメインに活動中。
+            </p>
           </div>
         </div>
 
         <!-- Contact -->
         <!-- <div class="android-screen-section mdl-typography--text-center">
+          <div class="space"></div>
           <a name="contact"></a>
           <div class="blue">
             <h2>連絡先</h2>
@@ -158,6 +167,7 @@
 
         <!-- Massage -->
         <!-- <div class="android-screen-section mdl-typography--text-center">
+          <div class="space"></div>
           <a name="massage"></a>
           <h2>感謝の思い</h2>
         </div> -->
