--- a/index.html
+++ b/index.html
@@ -87,15 +87,14 @@
         </div>
 
         <!-- About -->
-        <div class="android-screen-section mdl-typography--text-center">
+        <div class="android-screen-section mdl-typography--text-center about">
           <div class="space"></div>
           <a name="about"></a>
           <!-- <h2>Doa Worksについて</h2> -->
           <div class="blue">
             <h2>About</h2>
-            <p>Doa WorksはWeb制作の個人事務所です。小さな事務所だからこそできる、細やかさや丁寧さを大切にしています。</p>
-            <p>ビジネスにおいてWebサイトを「作る」だけでは、不十分だと考えています。</p>
-            <p>Webサイトはあくまで課題解決の手段に過ぎません。</p>
+            <p>Doa WorksはWeb制作の個人事務所です。<br>小さな事務所だからこそできる、細やかさや丁寧さを大切にしています。</p>
+            <p>ビジネスにおいてWebサイトを「作る」だけでは、不十分だと考えています。<br>Webサイトはあくまで課題解決の手段に過ぎません。</p>
             <p>Doa Worksでは、お客様が抱える課題を丁寧にヒアリングさせて頂き、「課題を解決できるWeb制作」を提供いたします。</p>
             <p>届けたい人に、しっかりと価値が伝わるWeb制作をお約束します。</p>
           </div>
@@ -108,7 +107,7 @@
           <!-- <h2>Doa Worksができること</h2> -->
           <div class="blue">
             <h2>Services</h2>
-            <p>以下のようなサービスでお客様の課題を解決します</p>
+            <p>以下のようなサービスでお客様の課題を解決します。</p>
 
             <h3>Webサイト制作（ホームページ、LP、オウンドメディア）</h3>
             <p>
@@ -145,14 +144,12 @@
             <p>HTML, CSS, JavaScript, PHP(CakePHP), WordPress, AWS, 各種レンタルサーバー, Git等</p>
 
             <h3>保有資格</h3>
-            <p>応用情報処理技術者<br>AWSソリューションアーキテクト(アソシエイト)</p>
+            <p>応用情報処理技術者<br>AWSソリューションアーキテクト</p>
 
             <h3>経歴</h3>
-            <p>
-              石川工業高等専門学校 電子機械工学専攻 卒業（大学同等の学士取得済み）<br>
-              新卒で業界No.1のガス器具メーカーグループにて、電子回路設計をメインに5年間従事。電子回路設計、ソフトウェア検討、製造ライン検討の業務を通して、プロジェクト運営に関する業務を幅広く経験。<br>
-              上記の会社を退職後、1年ほどかけてWeb制作、SEOについてゼロから学ぶ。現在は、不動産関係や商店街など、地元石川県のWeb制作をメインに活動中。
-            </p>
+            <p>石川工業高等専門学校 電子機械工学専攻 卒業</p>
+            <p>新卒で業界No.1のガス器具メーカーグループにて、電子回路設計をメインに5年間従事。電子回路設計、ソフトウェア検討、製造ライン検討の業務を通して、プロジェクト運営に関する業務を幅広く経験。</p>
+            <p>上記の会社を退職後、1年ほどかけてWeb制作、SEOについてゼロから学ぶ。現在は、不動産関係や商店街など、地元石川県のWeb制作をメインに活動中。</p>
           </div>
         </div>
 
@@ -177,13 +174,13 @@
           <!-- ボタンエリア -->
           <div class="mdl-mega-footer--top-section">
             <!-- ボタンメニュー -->
-            <div class="mdl-mega-footer--left-section">
+            <!-- <div class="mdl-mega-footer--left-section">
               <button class="mdl-mega-footer--social-btn"></button>
               &nbsp;
               <button class="mdl-mega-footer--social-btn"></button>
               &nbsp;
               <button class="mdl-mega-footer--social-btn"></button>
-            </div>
+            </div> -->
 
             <!-- トップへ -->
             <div class="mdl-mega-footer--right-section">
