コンテンツ修正

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <h2>Services</h2>
             <p>以下のようなサービスでお客様の課題を解決します。</p>
 
-            <h3>Webサイト制作（ホームページ、LP、オウンドメディア）</h3>
+            <h3>Webサイト制作</h3>
             <p>
               単一ページの販促用LPから、自社ホームページ、オウンドメディア構築まで、ご要望に合わせて制作します。
               Web制作について経験がないお客様についても、予算感・ご希望に合わせて最適な提案をさせていただきます。
