コンテンツ修正

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <!-- <h2>Doa Worksについて</h2> -->
           <div class="blue">
             <h2>About</h2>
-            <p>Doa WorksはWeb制作の個人事務所です。<br>小さな事務所だからこそできる、細やかさや丁寧さを大切にしています。</p>
+            <p>Doa Works(ドアワークス)は、Web制作の個人事務所です。<br>小さな事務所だからこそできる、細やかさや丁寧さを大切にしています。</p>
             <p>ビジネスにおいてWebサイトを「作る」だけでは、不十分だと考えています。<br>Webサイトはあくまで課題解決の手段に過ぎません。</p>
             <p>Doa Worksでは、お客様が抱える課題を丁寧にヒアリングさせて頂き、「課題を解決できるWeb制作」を提供いたします。</p>
             <p>届けたい人に、しっかりと価値が伝わるWeb制作をお約束します。</p>
