--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Introducing Lollipop, a sweet new take on Android.">
+    <meta name="description" content="Doa WorksはWeb制作の個人事務所です。お客様の課題に向き合い、成果につながるWeb制作をご提供します。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Doa Works</title>
 
