--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.min.css">
     <link rel="stylesheet" href="styles.css">
+    <!-- <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> -->
   </head>
   <body>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -88,7 +89,9 @@
 
         <!-- About -->
         <div class="android-screen-section mdl-typography--text-center about">
-          <div class="space"></div>
+          <div class="space">
+
+          </div>
           <a name="about"></a>
           <!-- <h2>Doa Worksについて</h2> -->
           <div class="blue">
@@ -102,7 +105,9 @@
 
         <!-- Services -->
         <div class="android-screen-section mdl-typography--text-center">
-          <div class="space"></div>
+          <div class="space">
+
+          </div>
           <a name="services"></a>
           <!-- <h2>Doa Worksができること</h2> -->
           <div class="blue">
@@ -125,7 +130,9 @@
 
         <!-- Works -->
         <!-- <div class="android-screen-section mdl-typography--text-center">
-          <div class="space"></div>
+          <div class="space">
+
+          </div>
           <a name="works"></a>
           <div class="blue">
             <h2>制作実績</h2>
@@ -134,7 +141,9 @@
 
         <!-- Skills -->
         <div class="android-screen-section mdl-typography--text-center">
-          <div class="space"></div>
+          <div class="space">
+
+          </div>
           <a name="skills"></a>
           <!-- <h2>経歴・スキル</h2> -->
           <div class="blue">
@@ -155,7 +164,9 @@
 
         <!-- Contact -->
         <!-- <div class="android-screen-section mdl-typography--text-center">
-          <div class="space"></div>
+          <div class="space">
+
+          </div>
           <a name="contact"></a>
           <div class="blue">
             <h2>連絡先</h2>
@@ -164,7 +175,9 @@
 
         <!-- Massage -->
         <!-- <div class="android-screen-section mdl-typography--text-center">
-          <div class="space"></div>
+          <div class="space">
+            
+          </div>
           <a name="massage"></a>
           <h2>感謝の思い</h2>
         </div> -->
