お問い合わせ先追加、レイアウト調整

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#services">Services</a>
               <!-- <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#works">Works</a> -->
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#skills">Skills & Career</a>
-              <!-- <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#contact">Contact</a> -->
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#contact">Contact</a>
               <!-- <a class="mdl-navigation__link mdl-typography--text-uppercase" href="#massage">Massage</a> -->
             </nav>
           </div>
@@ -68,7 +68,7 @@
             <a class="mdl-navigation__link" href="#services">Services</a>
             <!-- <a class="mdl-navigation__link" href="#works">Works</a> -->
             <a class="mdl-navigation__link" href="#skills">Skills & Career</a>
-            <!-- <a class="mdl-navigation__link" href="#contact">Contact</a> -->
+            <a class="mdl-navigation__link" href="#contact">Contact</a>
             <!-- <a class="mdl-navigation__link" href="#massage">Massage</a> -->
         </nav>
       </div>
@@ -159,6 +159,10 @@
             <p>石川工業高等専門学校 電子機械工学専攻 卒業</p>
             <p>新卒で業界No.1のガス器具メーカーグループにて、電子回路設計をメインに5年間従事。電子回路設計、ソフトウェア検討、製造ライン検討の業務を通して、プロジェクト運営に関する業務を幅広く経験。</p>
             <p>上記の会社を退職後、1年ほどかけてWeb制作、SEOについてゼロから学ぶ。現在は、不動産関係や商店街など、地元石川県のWeb制作をメインに活動中。</p>
+
+            <a name="contact"></a>
+            <h3>お問い合わせ</h3>
+            仕事のご依頼・ご相談については、<br>info@doa.works<br>までメールでご連絡をよろしくお願いいたします。
           </div>
         </div>
 
@@ -169,14 +173,14 @@
           </div>
           <a name="contact"></a>
           <div class="blue">
-            <h2>連絡先</h2>
+            <h2>Contact</h2>
           </div>
         </div> -->
 
         <!-- Massage -->
         <!-- <div class="android-screen-section mdl-typography--text-center">
           <div class="space">
-            
+
           </div>
           <a name="massage"></a>
           <h2>感謝の思い</h2>
