タグ設定ミス修正

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
             <a name="contact"></a>
             <h3>お問い合わせ</h3>
-            仕事のご依頼・ご相談については、<br>info@doa.works<br>までメールでご連絡をよろしくお願いいたします。
+            <p>仕事のご依頼・ご相談については、<br>info@doa.works<br>までメールでご連絡をよろしくお願いいたします。</p>
           </div>
         </div>
 
